[Fix] When use transfer type ECO Reward,, if there are multiple players complete the mission at the same time, the reward amount decreases by the order of player list.
Signed-off-by: dwcarrot <dw1064carota@outlook.com>